force-app/main/default/objects/RTV_Defective__c/RTV_Defective__c.object-meta.xml
<CustomObject>
    <label>RTV DEF Program</label>
    <nameField>
        <label>Defective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV DEF Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>