force-app/main/default/objects/RTV_Defective__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <defaultValue>(&quot;defective goods,custom returned them to Converse as per policy&quot;)</defaultValue>
    <label>Background</label>
    <type>TextArea</type>
</CustomField>