force-app/main/default/objects/RTV_Defective__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>(&quot;CNY&quot;)</defaultValue>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>