force-app/main/default/objects/RTV_Defective__c/fields/Defective_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Defective_Auth_Code__c</fullName>
    <label>Finance Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>