force-app/main/default/objects/RTV_Defective__c/fields/Defective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Defective_Rate__c</fullName>
    <label>Defective Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>