force-app/main/default/objects/RTV_Defective__c/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <label>FOB</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>