force-app/main/default/objects/RTV_Defective__c/fields/From_Takeback_Order__c.field-meta.xml
<CustomField>
    <fullName>From_Takeback_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Defective is created from a Takeback order</description>
    <inlineHelpText>This Defective is created from a Takeback order</inlineHelpText>
    <label>From Takeback Order</label>
    <referenceTo>RTV_Order__c</referenceTo>
    <relationshipName>RTV_Defective</relationshipName>
    <type>Lookup</type>
</CustomField>