force-app/main/default/objects/RTV_Defective__c/fields/Program_mechanism__c.field-meta.xml
<CustomField>
    <fullName>Program_mechanism__c</fullName>
    <label>Program mechanism</label>
    <type>TextArea</type>
</CustomField>