force-app/main/default/objects/RTV_Defective__c/fields/Program_Objective__c.field-meta.xml
<CustomField>
    <fullName>Program_Objective__c</fullName>
    <label>Program Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>