force-app/main/default/objects/RTV_Defective__c/fields/Program_Rate__c.field-meta.xml
<CustomField>
    <fullName>Program_Rate__c</fullName>
    <label>Program Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>