force-app/main/default/objects/RTV_Defective__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RTV_DEF_Program</relationshipName>
    <type>Lookup</type>
</CustomField>