force-app/main/default/objects/RTV_Defective__c/fields/TTL_FOB__c.field-meta.xml
<CustomField>
    <fullName>TTL_FOB__c</fullName>
    <label>TTL FOB</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>