force-app/main/default/objects/RTV_Defective__c/recordTypes/RTV_Defective_Off_Policy.recordType-meta.xml
<RecordType>
    <fullName>RTV_Defective_Off_Policy</fullName>
    <active>true</active>
    <label>RTV Defective Off Policy</label>
</RecordType>