force-app/main/default/objects/RTV_Defective__c/recordTypes/RTV_Defective_Ready.recordType-meta.xml
<RecordType>
    <fullName>RTV_Defective_Ready</fullName>
    <active>true</active>
    <label>RTV Defective Ready</label>
</RecordType>