force-app/main/default/objects/RTV_Defective__c/validationRules/CanNotChangeDateAfterInsert.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotChangeDateAfterInsert</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISCHANGED( Start_Date__c ) ,ISCHANGED( End_Date__c ) )</errorConditionFormula>
    <errorMessage>Can Not Change Date Information After Insert!</errorMessage>
</ValidationRule>