force-app/main/default/objects/RTV_Defective__c/validationRules/DefectiveNameCanNotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>DefectiveNameCanNotChange</fullName>
    <active>true</active>
    <description>Defective Name Can Not Change</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Defective Name Can Not Change!</errorMessage>
</ValidationRule>