force-app/main/default/objects/RTV_Defective__c/validationRules/StartDateCanNotBeLessThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateCanNotBeLessThanEndDate</fullName>
    <active>true</active>
    <description>The start date cannot be less than the end date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>The start date cannot be less than the end date!</errorMessage>
</ValidationRule>