force-app/main/default/objects/RTV_Defective__c/listViews/RMS_CS_Team_RTV_Defective.listView-meta.xml
<ListView>
    <fullName>RMS_CS_Team_RTV_Defective</fullName>
    <columns>NAME</columns>
    <columns>Defective_Auth_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>RMS CS Team</label>
    <queue>RMS_CS_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>